--- a/style.css
+++ b/style.css
@@ -27,10 +27,12 @@ body {
     width: 150px;
     height: 150px;
     border-radius: 50%;
+    margin-right: 32px;
 }
 
 .person {
-
+    display: flex;
+    align-items: flex-start;
 }
 
 .person__description {
